# k8s-agents-service

./: .env.example  .gitignore  README.md  compose.yaml  langgraph.json  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
docker/: Dockerfile.app  Dockerfile.cron  Dockerfile.service
docs/: File_Based_Credentials.md  RAG_Assistant.md  Thread_Deletion.md  Web_RAG_Agent.md
helm/: .env.example  add_platform.sh  argocd.yaml  create_secret.sh  create_secrets.sh  manual_deploy.sh  update_dependencies.sh  ysql.sh
helm/agents-service/: Chart.yaml  values.yaml
helm/agents-service/charts/: agents-streamlit-0.0.1.tgz
helm/agents-service/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/agents-service/templates/tests/: test-connection.yaml
helm/agents-streamlit/: Chart.yaml  values.yaml
helm/agents-streamlit/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/agents-streamlit/templates/tests/: test-connection.yaml
scripts/: create_pgvector_db.py  create_resume_vectors.py  create_resume_vectors_cron.py
src/: run_agent.py  streamlit_app.py
src/agents/: __init__.py  agents.py  compaction.py  configurable_model_graph.py  knowledge_base_agent.py  langgraph_supervisor_agent.py  lazy_agent.py  main_agent.py  mcp_agent.py  rag_assistant.py  react_agent.py  research_assistant.py  task_progress.py  tool_loop.py  tools.py  web_rag_agent.py  workflow_agent.py  workflow_tools.py
src/client/: client.py
src/core/: llm.py  settings.py
src/memory/: mongodb.py
src/schema/: __init__.py  models.py  schema.py  task_data.py
src/service/: __init__.py  service.py  utils.py
src/workflows/: cli_parser.py  dispatcher.py  registry.py  renderers.py
src/workflows/impls/: calculator.py
src/workflows/skills/capabilities/: calculator.md
src/workflows/skills/tools/: list_capabilities.md  read_capability.md  run_workflow_cli.md
tests/agents/: test_compaction_manager.py  test_main_agent_parallel.py
tests/app/: test_streamlit_app.py  test_streamlit_reasoning_join.py
tests/client/: test_client.py
tests/core/: test_llm.py  test_settings.py  test_tools_filters.py
tests/service/: conftest.py  test_service.py  test_service_e2e.py  test_service_streaming.py  test_utils.py
tests/workflows/: conftest.py  test_cli_parser.py  test_dispatcher.py  test_registry.py
ui/: .env.example  README.md  THREAD_MANAGEMENT.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
ui/app/: assistant.tsx  globals.css  layout.tsx
ui/app/api/chat/: route.ts
ui/app/api/history/: route.ts
ui/app/api/rate-limit/status/: route.ts
ui/app/api/service-info/: route.ts
ui/app/api/thread/delete/: route.ts
ui/app/api/user/threads/: route.ts
ui/app/signin/: page.tsx
ui/app/signup/: page.tsx
ui/components/: agent-select.tsx  app-sidebar.tsx  auth-user-provider.tsx  better-auth-form.tsx  better-auth-signin.tsx  better-auth-signup.tsx  custom-runtime-provider.tsx  debug-info.tsx  model-select.tsx  privacy-popup.tsx  rate-limit-display.tsx  rate-limit-provider.tsx  service-info-provider.tsx  task-ui.tsx  transfer-tool-ui.tsx  user-provider.tsx
ui/components/assistant-ui/: agent-suggestions.json  markdown-string.tsx  reasoning.tsx  thread-list.tsx  thread.tsx  tool-fallback.tsx
ui/components/ui/: sidebar.tsx  spinner.tsx
ui/hooks/: use-container-breakpoint.ts  use-rate-limit.ts  use-url-state.ts  use-user-storage.ts
ui/lib/: api-client.ts  auth-client.ts  auth.ts  backend-client.ts  frontend-api-client.ts  rate-limiter.ts  session-utils.ts  thread-utils.ts  types.ts  usage-overrides.ts  user-threads.ts  utils.ts
ui/public/: site.webmanifest
