[project]
name = "agent-service-toolkit"
version = "0.1.0"
description = "Full toolkit for running an AI agent service built with LangGraph, FastAPI and Streamlit"
readme = "README.md"
authors = [{ name = "Joshua Carroll", email = "carroll.joshk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11"

dependencies = [
    "docx2txt ~=0.9",
    "duckduckgo-search ~=8.1.1",
    "fastapi ~=0.119.0",
    "grpcio ~=1.75.1",
    "httpx ~=0.28.1",
    "jiter ~=0.11.0",
    "langchain-core ~=0.3.76",
    "langchain-community ~=0.3.30",
    "langchain-anthropic ~=0.3.20",
    "langchain-aws ~=0.2.33",
    "langchain-chroma ~=0.2.6",
    "langchain-google-genai ~=2.1.12",
    "langchain-google-vertexai ~=2.1.2",
    "langchain-groq ~=0.3.8",
    "langchain-ollama ~=0.3.8",
    "langchain-openai ~=0.3.33",
    "langchain-postgres ~=0.0.15",
    "langfuse ~=3.6.2",
    "langgraph ~=0.6.7",
    "langgraph-checkpoint-mongodb ~=0.2.1",
    "langgraph-checkpoint-postgres ~=2.0.23",
    "langgraph-checkpoint-sqlite ~=2.0.11",
    "langgraph-supervisor ~=0.0.29",
    "langsmith ~=0.4.31",
    "numexpr ~=2.14.1",
    "numpy ~=1.26.4; python_version <= '3.12'",
    "numpy ~=2.3.3; python_version >= '3.13'",
    "onnxruntime ~=1.23.0",
    "pandas ~=2.3.2",
    "psycopg[binary,pool] ~=3.2.10",
    "pyarrow ~=21.0.0",
    "pydantic ~=2.12.2",
    "pydantic-settings ~=2.11.0",
    "pypdf ~=6.10.2",
    "pyowm ~=3.5.0",
    "python-dotenv ~=1.2.2",
    "setuptools ~=80.9.0",
    "streamlit ~=1.50.0",
    "tavily-python ~=0.7.24",
    "tiktoken ~=0.12.0",
    "uvicorn ~=0.37.0",
    "langchain-mcp-adapters ~=0.1.10",
    "ddgs>=9.6.0",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem] ~=0.4.2",
    "pre-commit ~=4.3.0",
    "pytest ~=8.4.2",
    "pytest-cov ~=7.0.0",
    "pytest-env ~=1.2.0",
    "pytest-asyncio ~=1.2.0",
    "ruff ~=0.14.0",
    "mypy ~=1.18.2",
    "beautifulsoup4 ~=4.14.2",
    "langchain-google-community ~=2.0.10",
    "playwright ~=1.55.0",
]

# Group for the minimal dependencies to run just the client and Streamlit app.
# These are also installed in the default dependencies.
# To install run: `uv sync --frozen --only-group client`
client = [
    "httpx ~=0.28.1",
    "pydantic ~=2.12.2",
    "python-dotenv ~=1.2.2",
    "streamlit ~=1.50.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
OPENAI_API_KEY = "sk-fake-openai-key"

[tool.mypy]
plugins = "pydantic.mypy"
exclude = "src/streamlit_app.py"

[[tool.mypy.overrides]]
module = ["numexpr.*"]
follow_untyped_imports = true
