[project]
name = "agent-service-toolkit"
version = "0.1.0"
description = "Full toolkit for running an AI agent service built with LangGraph, FastAPI and Streamlit"
readme = "README.md"
authors = [{ name = "Joshua Carroll", email = "carroll.joshk@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11"

dependencies = [
    "docx2txt ~=0.9",
    "duckduckgo-search ~=8.1.1",
    "fastapi ~=0.136.1",
    "grpcio ~=1.80.0",
    "httpx ~=0.28.1",
    "jiter ~=0.14.0",
    "langchain-core ~=1.3.2",
    "langchain-community ~=0.4.1",
    "langchain-anthropic ~=1.4.2",
    "langchain-aws ~=1.4.5",
    "langchain-chroma ~=1.1.0",
    "langchain-google-genai ~=4.2.2",
    "langchain-groq ~=1.1.2",
    "langchain-ollama ~=1.1.0",
    "langchain-openai ~=1.2.1",
    "langchain-postgres ~=0.0.17",
    "langfuse ~=4.5.1",
    "langgraph ~=1.1.10",
    "langgraph-checkpoint-mongodb ~=0.3.1",
    "langgraph-checkpoint-postgres ~=3.0.5",
    "langgraph-checkpoint-sqlite ~=3.0.3",
    "langgraph-supervisor ~=0.0.31",
    "langsmith ~=0.7.37",
    "numexpr ~=2.14.1",
    "numpy ~=2.4.4; python_version <= '3.12'",
    "numpy ~=2.4.4; python_version >= '3.13'",
    "onnxruntime ~=1.25.1",
    "pandas ~=3.0.2",
    "psycopg[binary,pool] ~=3.3.3",
    "pyarrow ~=22.0.0",
    "pydantic ~=2.13.3",
    "pydantic-settings ~=2.14.0",
    "pypdf ~=6.10.2",
    "pyowm ~=3.5.0",
    "python-dotenv ~=1.2.2",
    "setuptools ~=82.0.1",
    "streamlit ~=1.56.0",
    "tavily-python ~=0.7.24",
    "tiktoken ~=0.12.0",
    "uvicorn ~=0.46.0",
    "langchain-mcp-adapters ~=0.2.2",
    "ddgs ~=9.14.1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem] ~=0.4.24",
    "pre-commit ~=4.3.0",
    "pytest ~=8.4.2",
    "pytest-cov ~=7.0.0",
    "pytest-env ~=1.2.0",
    "pytest-asyncio ~=1.2.0",
    "ruff ~=0.14.0",
    "mypy ~=1.18.2",
    "beautifulsoup4 ~=4.14.2",
    "langchain-google-community ~=3.0.5",
    "playwright ~=1.55.0",
]

# Group for the minimal dependencies to run just the client and Streamlit app.
# These are also installed in the default dependencies.
# To install run: `uv sync --frozen --only-group client`
client = [
    "httpx ~=0.28.1",
    "pydantic ~=2.13.3",
    "python-dotenv ~=1.2.2",
    "streamlit ~=1.56.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "U"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.pytest_env]
OPENAI_API_KEY = "sk-fake-openai-key"

[tool.mypy]
plugins = "pydantic.mypy"
exclude = "src/streamlit_app.py"

[[tool.mypy.overrides]]
module = ["numexpr.*"]
follow_untyped_imports = true
